--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
     <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top" id="sideNav">
       <a class="navbar-brand js-scroll-trigger" href="#page-top">
-        <span class="d-block d-lg-none">Start Bootstrap</span>
+        <span class="d-block d-lg-none">kimagine's Portfolio</span>
         <span class="d-none d-lg-block">
           <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="img/kimagine.jpg" alt="">
         </span>
@@ -72,7 +72,7 @@
             <span class="text-primary">HYE-JIN</span>
           </h1>
           <div class="subheading mb-5">Department of Computer Science (+82) 10-2090-9215 ·
-            <a href="mailto:name@email.com">ovoa22@gmail.com</a>
+            <a href="mailto:ovoa22@gmail.com">ovoa22@gmail.com</a>
           </div>
           <p class="mb-5">I am in the Master course at Kwangwoon University.</p>
           <ul class="list-inline list-social-icons mb-0">
