--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
     <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top" id="sideNav">
       <a class="navbar-brand js-scroll-trigger" href="#page-top">
-        <span class="d-block d-lg-none">kimagine's Portfolio</span>
+        <span class="d-block d-lg-none">Kimagine's Portfolio</span>
         <span class="d-none d-lg-block">
           <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="img/kimagine.jpg" alt="">
         </span>
@@ -77,7 +77,7 @@
           <p class="mb-5">I am in the Master course at Kwangwoon University.</p>
           <ul class="list-inline list-social-icons mb-0">
             <li class="list-inline-item">
-              <a href="#">
+              <a href="https://www.facebook.com/hyejin929">
                 <span class="fa-stack fa-lg">
                   <i class="fa fa-circle fa-stack-2x"></i>
                   <i class="fa fa-facebook fa-stack-1x fa-inverse"></i>
@@ -192,7 +192,6 @@
             <div class="resume-content mr-auto">
               <h3 class="mb-0">University of Colorado Boulder</h3>
               <div class="subheading mb-3">Bachelor of Science</div>
-              <div>Computer Science - Web Development Track</div>
               <p>GPA: 3.23</p>
             </div>
             <div class="resume-date text-md-right">
